istio-files/frontend-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: frontend
  name: frontend
spec:
  host: frontend.apps.cluster-ada4.ada4.example.opentlc.com
  port:
    targetPort: 8080
  to:
    kind: Service
    name: istio-ingressgateway
    weight: 100
  wildcardPolicy: None
status: {}
