istio-files/virtual-service-frontend-header-foo-bar-to-v1.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-virtual-service
spec:
  hosts:
  - frontend.apps.cluster-ada4.ada4.example.opentlc.com
  gateways:
  - frontend-gateway.user1-istio-system.svc.cluster.local
  http:
  - match:
    - headers:
        foo:
          exact: bar
    route:
    - destination:
        host: frontend
        subset: v1
  - route:
    - destination:
        host: frontend
        subset: v2
