istio-files/rbac-allow-frontend.yml
apiVersion: "security.istio.io/v1beta1"
kind: "AuthorizationPolicy"
metadata:
  name: rbac-allow-frontend
spec:
  selector:
    matchLabels:
      app: frontend
  rules:
  - to:
    - operation:
        methods: ["GET"]
